Add generator